--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <title>JLOrtizDiaz</title>
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    ></script>
     <style type="text/css">
+      /*Website Colors:
+      --davys-grey: #494947ff;
+      --eggshell: #f0ebd8ff;
+      --cerulean-frost: #6b9ac4ff;
+      --vermilion: #ca3c25ff;
+      --venetian-red: #c20114ff;*/
       header {
         padding-top: 0px;
         padding-bottom: 0px;
@@ -16,7 +26,7 @@
         margin-right: 0px;
       }
       body {
-        background-color: #f4f4ef;
+        background-color: #f0ebd8;
         display: block;
         font-family: serif;
         padding-top: 0px;
@@ -31,14 +41,14 @@
       }
       .topbar {
         display: flex;
-        background-color: #a01d26;
+        background-color: #c20114;
         list-style-type: none;
         font-size: 20px;
         text-align: center;
       }
       .topbar li {
         display: inline-block;
-        color: #f4f4ef;
+        color: #f0ebd8;
         margin-bottom: 0px;
         margin-top: 0px;
         margin-left: 100px;
@@ -47,7 +57,7 @@
         padding-bottom: 5px;
         padding-right: 10px;
         padding-left: 10px;
-        background-color: #20232a;
+        background-color: #494947;
         border-radius: 8px;
       }
       .main_list {
@@ -91,8 +101,8 @@
         height: 100%;
       }
       footer {
-        background-color: #a01d26;
-        color: #f4f4ef;
+        background-color: #ca3c25;
+        color: #f0ebd8;
         font-size: 10px;
         text-align: justify;
         padding-top: 0px;
@@ -115,46 +125,30 @@
         margin-bottom: 5px;
       }
       .buttns button {
-        background-color: #20232a;
+        background-color: #494947;
         font-size: 8px;
-        color: #f4f4ef;
+        color: #f0ebd8;
         margin-left: 2px;
         margin-right: 2px;
       }
       a {
-        color: white;
+        color: #f0ebd8;
         text-decoration: none;
       }
       .sidebar {
         display: block;
         height: 100%;
         width: 100%;
-        color: white;
-        background-color: #20232a;
+        color: #f0ebd8;
+        background-color: #494947;
         padding-top: 10px;
         padding-right: 10px;
       }
     </style>
-    <script type="text/javascript">
-      let x = document.getElementById("hideimage");
-      function snowing() {
-        document.body.style.background =
-          "url('images/pixelart/snow.gif') #ACBEBE";
-        x.style.display = "run-in";
-      }
-
-      function stop_snowing() {
-        document.body.style.background = "#F4F4EF";
-        x.style.display = "run-in";
-        x.style.animation = "none";
-      }
-    </script>
   </header>
   <body>
     <div class="topbar">
-      <div class="imgs">
-        <img id="smallpeng" src="images/pixelart/Penguinpoints56.png" />
-      </div>
+      <div class="imgs"></div>
       <nav>
         <ul>
           <span id="Home"
@@ -178,7 +172,6 @@
     </aside>
     <section>
       <div class="intro">
-        <img src="Pixelart/snow.gif" id="hideimage" hidden />
         <h1>Welcome</h1>
         <p>
           Welcome! Here you’ll find the achievements, projects and general
@@ -217,9 +210,24 @@
       </div>
     </section>
     <div class="buttns">
-      <button id="stop_btn" type="button" onclick="stop_snowing()">Stop</button>
-      <button id="sno_btn" type="button" onclick="snowing()">Snow?</button>
+      <button id="stop_btn" type="button">Stop</button>
+      <button id="sno_btn" type="button">Snow?</button>
     </div>
+    <script type="text/javascript">
+      $("#sno_btn").click(function () {
+        if ($("body").css("background-image") == "none") {
+          $("body").css({
+            "background-color": "#6b9ac4ff",
+            "background-image": "url('snow.gif')",
+          });
+        } else {
+          $("body").css({
+            "background-color": "#f0ebd8",
+            "background-image": "none",
+          });
+        }
+      });
+    </script>
   </body>
   <footer>Copywright information and shiz</footer>
 </html>
