--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <nav>
         <ul>
           <span id="Home"
-            ><li><a href="Homepage.html">Home</a></li></span
+            ><li><a href="index.html">Home</a></li></span
           >
           <span id="Projects"
             ><li><a href="Projects.html">Projects</a></li></span
@@ -210,7 +210,6 @@
       </div>
     </section>
     <div class="buttns">
-      <button id="stop_btn" type="button">Stop</button>
       <button id="sno_btn" type="button">Snow?</button>
     </div>
     <script type="text/javascript">
