--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             ><li><a href="index.html">Home</a></li></span
           >
           <span id="Projects"
-            ><li><a href="Projects.html">Projects</a></li></span
+            ><li><a href="projects.html">Projects</a></li></span
           >
           <span id="Contact"><li>Contact</li></span>
           <span id="Blog"><li>Blog</li></span>
