--- a/projects.html
+++ b/projects.html
@@ -159,7 +159,7 @@
           "
           frameborder="0"
           type="text/html"
-          src="../Wolfie873.github.io/Test Projects/GuessTheNumber.html"
+          src="GuessTheNumber.html"
           width="100%"
           height="100%"
           allowfullscreen
