--- a/projects.html
+++ b/projects.html
@@ -171,7 +171,7 @@
     <script type="text/javascript">
       $("#next").click(function () {
         $("#p_elem").html(function () {
-          $.get("DissapearingCircles.html", function (data) {
+          $.get("info.txt", function (data) {
             alert(data);
           });
         });
