--- a/projects.html
+++ b/projects.html
@@ -147,19 +147,19 @@
     </aside>
     <div class="buttns">
       <button id="previous" type="button"><</button>
-      <div id="p_elem">
+      <div>
         <iframe
           style="
-            width: 960px;
-            height: 540px;
-            position: absolute;
+            width: 480px;
+            height: 270px;
+            position: relative;
             left: 0px;
             top: 0px;
             overflow: hidden;
           "
           frameborder="0"
           type="text/html"
-          src="../Wolfie873.github.io/Test Projects/GuessTheNumber.html"
+          src=""
           width="100%"
           height="100%"
           allowfullscreen
@@ -170,10 +170,15 @@
     </div>
     <script type="text/javascript">
       $("#next").click(function () {
-        $("#p_elem").html(function () {
-          $.get("info.txt", function (data) {
-            return data;
-          });
+        $("#p_elem").attr("src", function (data) {
+          var webpages = [
+            "../Wolfie873.github.io/Test Projects/DissapearingCircles.html",
+            "../Wolfie873.github.io/Test Projects/GuessTheNumber.html",
+            "../Wolfie873.github.io/Test Projects/TestReaction.html",
+          ];
+          for (var i = 0; i < webpages.length; i++) {
+            return webpages[i];
+          }
         });
       });
     </script>
