--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"></a>
+          <a class="navbar-brand" href="#"><img src=""</a>
         </div>
       </nav>
 
