--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       --venetian-red: #c20114ff;-->
   </header>
   <body>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #494947ff">
           
         <div class="container-fluid">
             
