--- a/LifeDeath.html
+++ b/LifeDeath.html
@@ -99,18 +99,18 @@
             <div class="col-12 d-flex justify-content-center" id="webComic_container">
                 <button class="btn btn-dark" id="back"><</button>
                 <div id="webComic_window">
-                    <img class="lnd" id="profile" src="./L&D/ProfileDeath.jpg"/>
-                    <img class="lnd" id="aut" src="./L&D/Autobiography final.png"/>
-                    <img class="lnd" id="bar" src="./L&D/Bar.png"/>
-                    <img class="lnd" id="deadg" src="./L&D/Deadguy-strip.png"/>
-                    <img class="lnd" id="diversity" src="./L&D/diversity.png"/>
-                    <img class="lnd" id="games" src="./L&D/games.png"/>
-                    <img class="lnd" id="group" src="./L&D/Group.png"/>
-                    <img class="lnd" id="life" src="./L&D/Life.png"/>
-                    <img class="lnd" id="lifecomic" src="./L&D/Lifecomic.gif"/>
-                    <img class="lnd" id="procras" src="./L&D/Procrastination.png"/>
-                    <img class="lnd" id="smoke" src="./L&D/Smoking.png"/>
-                    <img class="lnd" id="winch" src="./L&D/Winchestnuts.png"/>
+                    <img class="lnd active" id="profile" src="./L&D/Images/ProfileDeath.jpg"/>
+                    <img class="lnd hidden" id="aut" src="./L&D/Images/Autobiography final.png"/>
+                    <img class="lnd hidden" id="bar" src="./L&D/Images/Bar.png"/>
+                    <img class="lnd hidden" id="deadg" src="./L&D/Images/Deadguy-strip.png"/>
+                    <img class="lnd hidden" id="diversity" src="./L&D/Images/diversity.png"/>
+                    <img class="lnd hidden" id="games" src="./L&D/Images/games.png"/>
+                    <img class="lnd hidden" id="group" src="./L&D/Images/Group.png"/>
+                    <img class="lnd hidden" id="life" src="./L&D/Images/Life.png"/>
+                    <img class="lnd hidden" id="lifecomic" src="./L&D/Images/Lifecomic.gif"/>
+                    <img class="lnd hidden" id="procras" src="./L&D/Images/Procrastination.png"/>
+                    <img class="lnd hidden" id="smoke" src="./L&D/Images/Smoking.png"/>
+                    <img class="lnd hidden" id="winch" src="./L&D/Images/Winchestnuts.png"/>
                 </div>
                 <button class="btn btn-light" id="fwd">></button>
             </div>
