--- a/LifeDeath.html
+++ b/LifeDeath.html
@@ -11,13 +11,33 @@
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
     crossorigin="anonymous">
 
-    <script
-      type="text/javascript"
-      src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-    ></script>
-    <!--JQuery input call-->
-    <script src="../Jquery_Practice/jquery-ui-1.13.1/jquery-ui.js"></script>
-    <!--UI elements from JQuery-->
+    <script type="text/javascript" src="L&D/jcarousel/dist/jquery.jcarousel.js"></script>
+<script type="text/javascript" src="L&D/jquery/src/jquery.js"></script>
+<script type="text/javascript">
+  $(document).ready(function () {
+    $(".jcarousel").jcarousel({
+      list: ".jcarousel-list",
+      items: ".jcarousel-item",
+      animation: {
+        duration: 800,
+        easing: "linear",
+        complete: function () {},
+      },
+      transitions: true,
+    });
+  });
+
+  $(".jcarousel").jcarousel("scroll", target);
+
+  $(".jcarousel-control-prev").click(function () {
+    $(".jcarousel").jcarousel("scroll", "-=1");
+  });
+
+  $(".jcarousel-control-next").click(function () {
+    $(".jcarousel").jcarousel("scroll", "+=1");
+  });
+
+</script>
 
       <link rel="stylesheet" href="mainStyle.css">
       <!--/*Website Colors:
@@ -97,22 +117,26 @@
     <div class="container">
         <div class="row">
             <div class="col-12 d-flex justify-content-center" id="webComic_container">
-                <button class="btn btn-dark" id="back"><</button>
-                <div id="webComic_window">
-                    <img class="lnd active" id="profile" src="./L&D/Images/ProfileDeath.jpg"/>
-                    <img class="lnd hidden" id="aut" src="./L&D/Images/Autobiography final.png"/>
-                    <img class="lnd hidden" id="bar" src="./L&D/Images/Bar.png"/>
-                    <img class="lnd hidden" id="deadg" src="./L&D/Images/Deadguy-strip.png"/>
-                    <img class="lnd hidden" id="diversity" src="./L&D/Images/diversity.png"/>
-                    <img class="lnd hidden" id="games" src="./L&D/Images/games.png"/>
-                    <img class="lnd hidden" id="group" src="./L&D/Images/Group.png"/>
-                    <img class="lnd hidden" id="life" src="./L&D/Images/Life.png"/>
-                    <img class="lnd hidden" id="lifecomic" src="./L&D/Images/Lifecomic.gif"/>
-                    <img class="lnd hidden" id="procras" src="./L&D/Images/Procrastination.png"/>
-                    <img class="lnd hidden" id="smoke" src="./L&D/Images/Smoking.png"/>
-                    <img class="lnd hidden" id="winch" src="./L&D/Images/Winchestnuts.png"/>
+              <div class="jcarousel-wrapper">
+                <a href="#" class="jcarousel-control-prev inactive" data-jcarouselcontrol="true"><</a>
+                <div class="jcarousel" data-jcarousel="true">
+                  <ul>
+                    <li><img id="profile" src="./L&D/Images/ProfileDeath.jpg"/></li>
+                    <li><img id="aut" src="./L&D/Images/Autobiography final.png"/></li>
+                    <li><img id="bar" src="./L&D/Images/Bar.png"/></li>
+                    <li><img id="deadg" src="./L&D/Images/Deadguy-strip.png"/></li>
+                    <li><img id="diversity" src="./L&D/Images/diversity.png"/></li>
+                    <li><img id="games" src="./L&D/Images/games.png"/></li>
+                    <li><img id="group" src="./L&D/Images/Group.png"/></li>
+                    <li><img id="life" src="./L&D/Images/Life.png"/></li>
+                    <li><img id="lifecomic" src="./L&D/Images/Lifecomic.gif"/></li>
+                    <li><img id="procras" src="./L&D/Images/Procrastination.png"/></li>
+                    <li><img id="smoke" src="./L&D/Images/Smoking.png"/></li>
+                    <li><img id="winch" src="./L&D/Images/Winchestnuts.png"/></li>
+                </ul>
                 </div>
-                <button class="btn btn-light" id="fwd">></button>
+                <a href="#" class="jcarousel-control-next" data-jcarouselcontrol="true">></a>
+              </div>
             </div>
         </div>
     </div>
