--- a/LifeDeath.html
+++ b/LifeDeath.html
@@ -11,8 +11,13 @@
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
     crossorigin="anonymous">
 
-    <script type="text/javascript" src="L&D/jcarousel/dist/jquery.jcarousel.js"></script>
-<script type="text/javascript" src="L&D/jquery/src/jquery.js"></script>
+    
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+    ></script>
+    <!--JQuery input call-->
+    <script type="text/javascript" src="./L&D/webComic.js"></script>
 
       <link rel="stylesheet" href="mainStyle.css">
       <!--/*Website Colors:
@@ -93,21 +98,21 @@
         <div class="row">
             <div class="col-12 d-flex justify-content-center" id="webComic_container">
               <div class="jcarousel-wrapper">
-                <a href="#" class="jcarousel-control-prev inactive" data-jcarouselcontrol="true"><</a>
+                <a href="#" class="jcarousel-control-prev" data-jcarouselcontrol="true"><</a>
                 <div class="jcarousel" data-jcarousel="true">
                   <ul>
-                    <li class="jcarousel-items active"><img id="profile" src="./L&D/Images/ProfileDeath.jpg"/></li>
-                    <li class="jcarousel-items inactive" ><img id="aut" src="./L&D/Images/Autobiography final.png"/></li>
-                    <li class="jcarousel-items inactive"><img id="bar" src="./L&D/Images/Bar.png"/></li>
-                    <li class="jcarousel-items inactive"><img id="deadg" src="./L&D/Images/Deadguy-strip.png"/></li>
-                    <li class="jcarousel-items inactive"><img id="diversity" src="./L&D/Images/diversity.png"/></li>
-                    <li class="jcarousel-items inactive"><img id="games" src="./L&D/Images/games.png"/></li>
-                    <li class="jcarousel-items inactive"><img id="group" src="./L&D/Images/Group.png"/></li>
-                    <li class="jcarousel-items inactive"><img id="life" src="./L&D/Images/Life.png"/></li>
-                    <li class="jcarousel-items inactive"><img id="lifecomic" src="./L&D/Images/Lifecomic.gif"/></li>
-                    <li class="jcarousel-items inactive"><img id="procras" src="./L&D/Images/Procrastination.png"/></li>
-                    <li class="jcarousel-items inactive"><img id="smoke" src="./L&D/Images/Smoking.png"/></li>
-                    <li class="jcarousel-items inactive"><img id="winch" src="./L&D/Images/Winchestnuts.png"/></li>
+                    <li class="jcarousel-items-on"><img id="profile" src="./L&D/Images/ProfileDeath.jpg"/></li>
+                    <li class="jcarousel-items-off" ><img id="aut" src="./L&D/Images/Autobiography final.png"/></li>
+                    <li class="jcarousel-items-off"><img id="bar" src="./L&D/Images/Bar.png"/></li>
+                    <li class="jcarousel-items-off"><img id="deadg" src="./L&D/Images/Deadguy-strip.png"/></li>
+                    <li class="jcarousel-items-off"><img id="diversity" src="./L&D/Images/diversity.png"/></li>
+                    <li class="jcarousel-items-off"><img id="games" src="./L&D/Images/games.png"/></li>
+                    <li class="jcarousel-items-off"><img id="group" src="./L&D/Images/Group.png"/></li>
+                    <li class="jcarousel-items-off"><img id="life" src="./L&D/Images/Life.png"/></li>
+                    <li class="jcarousel-items-off"><img id="lifecomic" src="./L&D/Images/Lifecomic.gif"/></li>
+                    <li class="jcarousel-items-off"><img id="procras" src="./L&D/Images/Procrastination.png"/></li>
+                    <li class="jcarousel-items-off"><img id="smoke" src="./L&D/Images/Smoking.png"/></li>
+                    <li class="jcarousel-items-off"><img id="winch" src="./L&D/Images/Winchestnuts.png"/></li>
                 </ul>
                 </div>
                 <a href="#" class="jcarousel-control-next" data-jcarouselcontrol="true">></a>
