--- a/LifeDeath.html
+++ b/LifeDeath.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
   <header>
     <title>JLOrtizDiaz</title>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +18,11 @@
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
     ></script>
     <!--JQuery input call-->
+
     <script type="text/javascript" src="./L&D/webComic.js"></script>
+
+    <script type="text/javascript" src="./L&D/jcarousel/dist/jquery.jcarousel.min.js"></script>
+
 
       <link rel="stylesheet" href="mainStyle.css">
       <!--/*Website Colors:
@@ -98,25 +103,36 @@
         <div class="row">
             <div class="col-12 d-flex justify-content-center" id="webComic_container">
               <div class="jcarousel-wrapper">
-                <a href="#" class="jcarousel-control-prev" data-jcarouselcontrol="true"><</a>
+                <a href="#" class="jcarousel-prev" data-jcarouselcontrol="true"><</a>
                 <div class="jcarousel" data-jcarousel="true">
-                  <ul>
-                    <li class="jcarousel-items-on"><img id="profile" src="./L&D/Images/ProfileDeath.jpg"/></li>
-                    <li class="jcarousel-items-off" ><img id="aut" src="./L&D/Images/Autobiography final.png"/></li>
-                    <li class="jcarousel-items-off"><img id="bar" src="./L&D/Images/Bar.png"/></li>
-                    <li class="jcarousel-items-off"><img id="deadg" src="./L&D/Images/Deadguy-strip.png"/></li>
-                    <li class="jcarousel-items-off"><img id="diversity" src="./L&D/Images/diversity.png"/></li>
-                    <li class="jcarousel-items-off"><img id="games" src="./L&D/Images/games.png"/></li>
-                    <li class="jcarousel-items-off"><img id="group" src="./L&D/Images/Group.png"/></li>
-                    <li class="jcarousel-items-off"><img id="life" src="./L&D/Images/Life.png"/></li>
-                    <li class="jcarousel-items-off"><img id="lifecomic" src="./L&D/Images/Lifecomic.gif"/></li>
-                    <li class="jcarousel-items-off"><img id="procras" src="./L&D/Images/Procrastination.png"/></li>
-                    <li class="jcarousel-items-off"><img id="smoke" src="./L&D/Images/Smoking.png"/></li>
-                    <li class="jcarousel-items-off"><img id="winch" src="./L&D/Images/Winchestnuts.png"/></li>
-                </ul>
+                  <div >
+                    <img class="jcarousel-item" id="profile" src="./L&D/Images/ProfileDeath.jpg"/>
+
+                    <img class="jcarousel-item" id="aut" src="./L&D/Images/Autobiography final.png"/>
+
+                    <img class="jcarousel-item" id="bar" src="./L&D/Images/Bar.png"/>
+
+                   <img class="jcarousel-item" id="deadg" src="./L&D/Images/Deadguy-strip.png"/>
+
+                    <img class="jcarousel-item" id="diversity" src="./L&D/Images/diversity.png"/>
+
+                    <img class="jcarousel-item" id="games"src="./L&D/Images/games.png"/>
+
+                    <img class="jcarousel-item" id="group" src="./L&D/Images/Group.png"/>
+
+                    <img class="jcarousel-item" id="life" src="./L&D/Images/Life.png"/>
+
+                    <img class="jcarousel-item" id="lifecomic" src="./L&D/Images/Lifecomic.gif"/>
+
+                    <img class="jcarousel-item" id="procras" src="./L&D/Images/Procrastination.png"/>
+
+                    <img class="jcarousel-item" id="smoke" src="./L&D/Images/Smoking.png"/>
+
+                    <img class="jcarousel-item" id="winch" src="./L&D/Images/Winchestnuts.png"/>
+
                 </div>
-                <a href="#" class="jcarousel-control-next" data-jcarouselcontrol="true">></a>
               </div>
+              <a href="#" class="jcarousel-next" data-jcarouselcontrol="true">></a>
             </div>
         </div>
     </div>
