--- a/LifeDeath.html
+++ b/LifeDeath.html
@@ -23,7 +23,7 @@
     <script src="../Jquery_Practice/jquery-ui-1.13.1/jquery-ui.js"></script>
     <!--UI elements from JQuery-->
 
-    <script type="text/javascript" src="./jcarousel/dist/jquery.jcarousel.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jcarousel/0.3.9/jquery.jcarousel.min.js"></script>
 
       <link rel="stylesheet" href="mainStyle.css">
       <!--/*Website Colors:
