--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       --venetian-red: #c20114ff;-->
   </header>
   <body>
-    <a href="testingsite.php">testingsite</a>
+    <a href="./PHPandTesting/testingsite.php">testingsite</a>
       <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #494947ff; color: #f0ebd8ff">
           
         <div class="container-fluid">
