--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   </header>
   <body>
     <a href="./PHPandTesting/testingsite.php">testingsite</a>
+    <a href="./PHPandTesting/testsite2.php">testingsite2</a>
       <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #494947ff; color: #f0ebd8ff">
           
         <div class="container-fluid">
