--- a/Test Projects/Javascript_practice.html
+++ b/Test Projects/Javascript_practice.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-    <title>Testing</title>
-  </head>
-  <body>
-    <p id="example">Hello world</p>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="utf-8" />
+        <title>Testing</title>
+    </head>
+    <body>
+        <p id="example">Hello world</p>
 
-    <button id="btn">Change Text</button>
+        <button id="btn">Change Text</button>
 
-    <p id="appnd"></p>
+        <p id="appnd"></p>
 
-    <button id="appndbtn">Append Text</button>
+        <button id="appndbtn">Append Text</button>
 
-    <p id="moreText">This is some text that transforms</p>
-    <button id="styleText">Style text</button>
+        <p id="moreText">This is some text that transforms</p>
+        <button id="styleText">Style text</button>
 
-    <script type="text/javascript">
-      document.getElementById("btn").onclick = function () {
-        //alert("Button Clicked");
+        <script type="text/javascript">
+            document.getElementById('btn').onclick = function () {
+                //alert("Button Clicked");
 
-        document.getElementById("example").innerHTML =
-          "Hello more worlds people";
-      };
+                document.getElementById('example').innerHTML =
+                    'Hello more worlds people'
+            }
 
-      document.getElementById("appndbtn").onclick = function () {
-        document.getElementById("appnd").innerHTML =
-          "There should be alot of text here once you press the button";
-      };
-      document.getElementById("styleText").onclick = function () {
-        document.getElementById("moreText").style.display = "none";
-      };
-    </script>
-  </body>
-  <footer></footer>
+            document.getElementById('appndbtn').onclick = function () {
+                document.getElementById('appnd').innerHTML =
+                    'There should be alot of text here once you press the button'
+            }
+            document.getElementById('styleText').onclick = function () {
+                document.getElementById('moreText').style.display = 'none'
+            }
+        </script>
+    </body>
+    <footer></footer>
 </html>
