--- a/Test Projects/ArraysJS.html
+++ b/Test Projects/ArraysJS.html
@@ -1,73 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-    <title>Testing</title>
-    <style type="text/css">
-      button {
-        width: "100px";
-        height: "50px";
-      }
-    </style>
-  </head>
-  <body>
-    <p id="textChange">What ingridient do you want to add to the pizza?</p>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="utf-8" />
+        <title>Testing</title>
+        <style type="text/css">
+            button {
+                width: '100px';
+                height: '50px';
+            }
+        </style>
+    </head>
+    <body>
+        <p id="textChange">What ingridient do you want to add to the pizza?</p>
 
-    <input type="text" id="ingridient" placeholder="ingridient" />
+        <input type="text" id="ingridient" placeholder="ingridient" />
 
-    <button id="sub" type="button" aria-label="submit" onclick="changeText()">
-      Submit
-    </button>
+        <button
+            id="sub"
+            type="button"
+            aria-label="submit"
+            onclick="changeText()"
+        >
+            Submit
+        </button>
 
-    <div id="addText"></div>
+        <div id="addText"></div>
 
-    <script type="text/javascript">
-      function changeText() {
-        var myArray = new Array();
-        var myText = document.getElementById("ingridient").value;
-        var newText = ["", "", "", "", ""];
+        <script type="text/javascript">
+            function changeText() {
+                var myArray = new Array()
+                var myText = document.getElementById('ingridient').value
+                var newText = ['', '', '', '', '']
 
-        myArray[0] = "pizza";
-        myArray[1] = "cheese";
-        myArray[2] = "pepperoni";
-        myArray[3] = "sauce";
-        myArray[4] = myText;
+                myArray[0] = 'pizza'
+                myArray[1] = 'cheese'
+                myArray[2] = 'pepperoni'
+                myArray[3] = 'sauce'
+                myArray[4] = myText
 
-        console.log(myArray);
+                console.log(myArray)
 
-        secondArray = ["values", "text", "array", "learning"];
+                secondArray = ['values', 'text', 'array', 'learning']
 
-        secondArray.push(myArray[2]);
+                secondArray.push(myArray[2])
 
-        secondArray.splice(1, 1, "testing");
+                secondArray.splice(1, 1, 'testing')
 
-        console.log(secondArray);
+                console.log(secondArray)
 
-        for (var i = 0; i < myArray.length; i++) {
-          newText[i] = newText[i] + "<p>" + myArray[i] + "</p>";
-        }
+                for (var i = 0; i < myArray.length; i++) {
+                    newText[i] = newText[i] + '<p>' + myArray[i] + '</p>'
+                }
 
-        document.getElementById("addText").innerHTML =
-          "<ol>Your ingridients are: " +
-          "<li>" +
-          newText[0] +
-          "</li>" +
-          "<li>" +
-          newText[1] +
-          "</li>" +
-          "<li>" +
-          newText[2] +
-          "</li>" +
-          "<li>" +
-          newText[3] +
-          "</li>" +
-          "<li>" +
-          newText[4] +
-          "</li>" +
-          "</ol>";
-      }
-    </script>
-  </body>
-  <footer></footer>
+                document.getElementById('addText').innerHTML =
+                    '<ol>Your ingridients are: ' +
+                    '<li>' +
+                    newText[0] +
+                    '</li>' +
+                    '<li>' +
+                    newText[1] +
+                    '</li>' +
+                    '<li>' +
+                    newText[2] +
+                    '</li>' +
+                    '<li>' +
+                    newText[3] +
+                    '</li>' +
+                    '<li>' +
+                    newText[4] +
+                    '</li>' +
+                    '</ol>'
+            }
+        </script>
+    </body>
+    <footer></footer>
 </html>
