--- a/Test Projects/TestReaction.html
+++ b/Test Projects/TestReaction.html
@@ -1,97 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-    <title>Reactionic</title>
-    <style>
-      #shape {
-        width: 100px;
-        height: 100px;
-        background-color: red;
-        display: none;
-        position: relative;
-      }
-      #gameArea {
-        position: fixed;
-        margin: auto;
-        width: 500px;
-        height: 500px;
-        border-color: black;
-        border-width: 5px;
-      }
-    </style>
-  </head>
-  <body>
-    <p>Your Time: <span id="timer"></span></p>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="utf-8" />
+        <title>Reactionic</title>
+        <style>
+            #shape {
+                width: 100px;
+                height: 100px;
+                background-color: red;
+                display: none;
+                position: relative;
+            }
+            #gameArea {
+                position: fixed;
+                margin: auto;
+                width: 500px;
+                height: 500px;
+                border-color: black;
+                border-width: 5px;
+            }
+        </style>
+    </head>
+    <body>
+        <p>Your Time: <span id="timer"></span></p>
 
-    <div id="gameArea">
-      <div id="shape"></div>
-    </div>
+        <div id="gameArea">
+            <div id="shape"></div>
+        </div>
 
-    <script type="text/javascript">
-      function getRandomColor() {
-        var letters = "0123456789ABCDEF".split("");
-        var color = "#";
-        for (var i = 0; i < 6; i++) {
-          color += letters[Math.floor(Math.random() * 16)];
-        }
-        return color;
-      }
+        <script type="text/javascript">
+            function getRandomColor() {
+                var letters = '0123456789ABCDEF'.split('')
+                var color = '#'
+                for (var i = 0; i < 6; i++) {
+                    color += letters[Math.floor(Math.random() * 16)]
+                }
+                return color
+            }
 
-      var start = new Date().getTime();
+            var start = new Date().getTime()
 
-      function shapeAppear() {
-        var square = Math.random() * 200 + 100;
+            function shapeAppear() {
+                var square = Math.random() * 200 + 100
 
-        if (Math.random() > 0.5) {
-          document.getElementById("shape").style.borderRadius = "50%";
-        } else if (Math.random() > 0.25) {
-          document.getElementById("shape").style.borderRadius = "25%";
-        } else if (Math.random() > 0.1) {
-          document.getElementById("shape").style.borderRadius = "10%";
-        } else if (Math.random() > 0.75) {
-          document.getElementById("shape").style.borderRadius = "75%";
-        } else {
-          document.getElementById("shape").style.borderRadius = "0%";
-        }
+                if (Math.random() > 0.5) {
+                    document.getElementById('shape').style.borderRadius = '50%'
+                } else if (Math.random() > 0.25) {
+                    document.getElementById('shape').style.borderRadius = '25%'
+                } else if (Math.random() > 0.1) {
+                    document.getElementById('shape').style.borderRadius = '10%'
+                } else if (Math.random() > 0.75) {
+                    document.getElementById('shape').style.borderRadius = '75%'
+                } else {
+                    document.getElementById('shape').style.borderRadius = '0%'
+                }
 
-        document.getElementById("shape").style.backgroundColor =
-          getRandomColor();
-        document.getElementById("shape").style.width = square + "px";
-        document.getElementById("shape").style.height = square + "px";
-        document.getElementById("shape").style.top =
-          randomGenerator(5, 65) + "%";
-        document.getElementById("shape").style.left =
-          randomGenerator(5, 65) + "%";
-        document.getElementById("shape").style.display = "block";
+                document.getElementById('shape').style.backgroundColor =
+                    getRandomColor()
+                document.getElementById('shape').style.width = square + 'px'
+                document.getElementById('shape').style.height = square + 'px'
+                document.getElementById('shape').style.top =
+                    randomGenerator(5, 65) + '%'
+                document.getElementById('shape').style.left =
+                    randomGenerator(5, 65) + '%'
+                document.getElementById('shape').style.display = 'block'
 
-        start = new Date().getTime();
-      }
+                start = new Date().getTime()
+            }
 
-      function randomGenerator(min, max) {
-        return Math.floor(Math.random() * (max - min + 1));
-      }
+            function randomGenerator(min, max) {
+                return Math.floor(Math.random() * (max - min + 1))
+            }
 
-      var rand = randomGenerator();
+            var rand = randomGenerator()
 
-      function appearAfterDelay() {
-        setTimeout(shapeAppear, randomGenerator(0, 2000));
-      }
+            function appearAfterDelay() {
+                setTimeout(shapeAppear, randomGenerator(0, 2000))
+            }
 
-      appearAfterDelay();
+            appearAfterDelay()
 
-      document.getElementById("shape").onclick = function () {
-        var end = new Date().getTime();
-        var timer = (end - start) / 1000;
+            document.getElementById('shape').onclick = function () {
+                var end = new Date().getTime()
+                var timer = (end - start) / 1000
 
-        document.getElementById("shape").style.display = "none";
-        document.getElementById("timer").innerHTML = timer + " seconds";
+                document.getElementById('shape').style.display = 'none'
+                document.getElementById('timer').innerHTML = timer + ' seconds'
 
-        appearAfterDelay();
-      };
-    </script>
-  </body>
+                appearAfterDelay()
+            }
+        </script>
+    </body>
 
-  <footer></footer>
+    <footer></footer>
 </html>
