--- a/stories.html
+++ b/stories.html
@@ -33,62 +33,106 @@
       --venetian-red: #c20114ff;*/
             .col {
                 height: 300px;
-                border: 5px solid blue;
-                position: absolute;
-                left: 0;
+                width: 100%;
             }
             .top {
-                z-index: 2;
-                width: 100%;
-                height: 300px;
+                z-index: 3;
                 border: 2px solid black;
             }
+            .overlay {
+                z-index: 4;
+                border: 4px solid red;
+            }
             .bot {
-                z-index: 1;
+                z-index: 2;
+                border: 6px solid purple;
             }
-            #CandD {
-                background-color: red;
+            img {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 100%;
+                height: 100%;
             }
-            #Blue {
-                background-color: blueviolet;
+            #CandDover,
+            #CandDtop,
+            #CandDbot {
+                border: 2px solid red;
+                position: absolute;
             }
-            #Red {
-                background-color: chartreuse;
-                top: 300px;
+            #CandDover {
+                background-color: none;
             }
-            #LdelF {
-                background-color: brown;
-                top: 300px;
+            #CandDtop {
+                background-image: url(./Images/ninoydragon.png);
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: 100%;
+                height: 300px;
+            }
+            #CandDbot {
+                background-color: bisque;
+            }
+            #BlueOver,
+            #Bluetop,
+            #Bluebot {
+                border: 3px solid blue;
+                position: absolute;
+                margin-top: 300px;
+            }
+            #BlueOver {
+                background-color: none;
+            }
+            #Bluetop {
+                background-color: aqua;
+            }
+            #Bluebot {
+                background-color: bisque;
             }
         </style>
     </header>
     <body>
         <div class="container-fluid">
             <div class="row">
-                <div class="col top" id="CandDtop"></div>
+                <div class="col overlay" id="CandDover"></div>
+                <div class="col top" id="CandDtop">
+                    <a href="theChildandtheDragon.html"></a>
+                </div>
                 <div class="col bot" id="CandDbot"></div>
             </div>
             <div class="row">
-                <div class="col bot" id="Blue"></div>
-            </div>
-            <div class="row">
-                <div class="col top" id="Red"></div>
-            </div>
-            <div class="row">
-                <div class="col bot" id="LdelF"></div>
+                <div class="col overlay" id="BlueOver"></div>
+                <div class="col top" id="Bluetop"></div>
+                <div class="col bot" id="Bluebot"></div>
             </div>
         </div>
         <script type="text/javascript">
-            $('#CandDtop').hover(
+            $('#CandDover').hover(
                 function () {
-                    $('#Blue').animate({
+                    $('#CandDtop').animate({
                         width: '50%',
                         opacity: '0.5',
                         left: '50%',
                     })
                 },
                 function () {
-                    $('#Blue').animate({
+                    $('#CandDtop').animate({
+                        width: '100%',
+                        opacity: '1',
+                        left: '0',
+                    })
+                }
+            )
+            $('#BlueOver').hover(
+                function () {
+                    $('#Bluetop').animate({
+                        width: '50%',
+                        opacity: '0.5',
+                        left: '50%',
+                    })
+                },
+                function () {
+                    $('#Bluetop').animate({
                         width: '100%',
                         opacity: '1',
                         left: '0',
