--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <a href="./PHPandTesting/testingsite.php">testingsite</a>
   <a href="./PHPandTesting/testsite2.php">testingsite2</a>
   <a href="./PHPandTesting/weatherScrapper.php">Weather Scrapper</a>
+  <a href="./MySqlPractice/initial.php">SQL1</a>
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #494947ff; color: #f0ebd8ff">
 
     <div class="container-fluid">
