--- a/index.html
+++ b/index.html
@@ -18,11 +18,18 @@
 
   <link rel="stylesheet" href="mainStyle.css">
   <!--/*Website Colors:
-      --davys-grey: #494947ff;
-      --eggshell: #f0ebd8ff;
-      --cerulean-frost: #6b9ac4ff;
-      --vermilion: #ca3c25ff;
-      --venetian-red: #c20114ff;-->
+      /* CSS HEX */
+--cultured: #f8f9faff;
+--cultured-2: #e9ecefff;
+--gainsboro: #dee2e6ff;
+--light-gray: #ced4daff;
+--cadet-blue-crayola: #adb5bdff;
+--sonic-silver: #6c757dff;
+--davys-grey: #495057ff;
+--onyx: #343a40ff;
+--eerie-black: #212529ff;
+--eerie-black-2: #121416ff;
+  -->
 </header>
 
 <body>
